[package]
name = "bitcoin-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bigint = "4.4"
bincode = "1.3"
chrono = {version="0.4", features = ["serde"]}
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
